<resources>
    <string name="app_name">MyScheduler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="calendar_name">io.github.yunato.myscheduler</string>

    <!-- ToolbarMenu -->
    <string name="menu_synchronization">"同期"</string>

    <!-- Title -->
    <string name="title_calendar">"日付の選択"</string>

    <!-- DrawerMenu -->
    <string name="drawer_title">"Menu"</string>
    <string name="menu_title_day">"Day"</string>
    <string name="menu_title_calendar">"Calendar"</string>
    <string name="menu_title_confirmation">"Confirmation"</string>
    <string name="menu_title_analysis">"Analysis"</string>

    <!-- DayPlanList -->
    <string name="text_no_item">Event はありません．</string>
    <!-- InputPlanInfo -->
    <string name="text_title">Input Title</string>
    <string name="text_memo">Input Memo</string>

    <!-- ShowPlanInfo -->
    <string name="text_hyphen"> - </string>

    <!-- Imge -->
    <string name="image_start_time">image_startTime</string>
    <string name="image_end_time">image_endTime</string>
    <string name="image_memo">image_memo</string>

    <string name="title_activity_edit_plan_info">EditPlanInfoActivity</string>
    <string name="title_activity_show_plan_info">ShowPlanInfoActivity</string>
    <string name="action_edit">Edit</string>

</resources>
